# gutenberg

./: .gitignore  Makefile  package-lock.json  pyproject.toml  start_es.sh
api/gutenberg/: api.py  client.py  es_index.py  ingestion.py  search.py  settings.py  utils.py
api/gutenberg/scripts/: setup_es.py
api/gutenberg/search_configs/gutenberg_0/: mappings.json  search.jinja  settings.json
api/gutenberg/search_configs/gutenberg_1/: mappings.json  readme.md  search.jinja  settings.json
api/gutenberg/search_configs/gutenberg_3/: mappings.json  search.jinja  settings.json
api/gutenberg/search_configs/gutenberg_4/: mappings.json  search.jinja
frontend/gutenberg/: package-lock.json  package.json
frontend/gutenberg/public/: index.html
frontend/gutenberg/src/: App.css  App.js  NoResults.js  Search.js  SearchInput.js  SearchResult.js  SearchResults.js
frontend/gutenberg/src/routes/: Contact.js  Destroy.js  Edit.js  Root.js  SearchIndex.js
